--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.HomeFragment">
+    tools:context=".ui.HomeFragment"
+    android:background="@color/white">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/home_lineleft"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.04"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/home_lineright"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.96"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:paddingTop="5.5dp"
+        android:paddingBottom="5.5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/FE9520">
+
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/white"
+            android:visibility="visible"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.hjq.bar.TitleBar
         android:id="@+id/title_home"
         android:layout_width="match_parent"
@@ -12,19 +48,63 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="首页"
         app:titleColor="@color/white"
-        android:background="@color/blue_400"/>
+        android:background="@color/FE9520"
+        android:visibility="gone"/>
 
     <com.youth.banner.Banner
         android:id="@+id/home_banner"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@+id/title_home"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintCircleRadius="5dp"
+        app:layout_constraintDimensionRatio="h,1:0.56"
+        app:layout_constraintStart_toEndOf="@+id/home_lineleft"
+        app:layout_constraintEnd_toStartOf="@+id/home_lineright"
+        app:layout_constraintTop_toBottomOf="@+id/layout_search"
+        android:layout_marginTop="10dp"/>
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_notice"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/home_banner"
+        app:layout_constraintStart_toStartOf="@+id/home_banner"
+        app:layout_constraintEnd_toEndOf="@id/home_banner"
+        android:paddingTop="13dp"
+        android:paddingBottom="12dp"
+        android:layout_marginTop="10dp"
+        app:shape_radius="11dp"
+        app:shape_solidColor="@color/FFF8F0">
+        <ImageView
+            android:id="@+id/iv_notice"
+            android:layout_width="35.5dp"
+            android:layout_height="45.5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_notice"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/string_notice"
+            android:textSize="13dp"
+            android:textColor="@color/F5B064"
+            app:layout_constraintStart_toEndOf="@+id/iv_notice"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:maxLines="2"
+            android:ellipsize="end"/>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/home_banner"
+        app:layout_constraintStart_toStartOf="@+id/home_banner"
+        app:layout_constraintEnd_toEndOf="@id/home_banner"
+        app:layout_constraintTop_toBottomOf="@+id/layout_notice"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        android:layout_marginTop="20dp"
+        tools:listitem="@layout/item_product"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
