--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -5,21 +5,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ProjectFragment">
+   <com.hjq.bar.TitleBar
+       android:id="@+id/title_tuijian"
+       android:layout_width="match_parent"
+       android:layout_height="44dp"
+       app:title="推荐"
+       app:titleGravity="start"
+       app:leftIconWidth="0dp"
+       android:background="@color/white"
+       app:layout_constraintTop_toTopOf="parent"
+       android:layout_marginTop="30dp"
+       />
 
-    <com.flyco.tablayout.SlidingTabLayout
-        android:id="@+id/project_tab"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:tl_indicator_color="@color/white"
-        app:tl_indicator_width="20dp"
-        app:tl_textSelectColor="@color/white"
-        app:tl_textUnselectColor="#666666"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/blue_400"/>
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/project_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/project_tab"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/video_list"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       tools:listitem="@layout/item_video"
+       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+       app:spanCount="2"
+       app:layout_constraintTop_toBottomOf="@+id/title_tuijian"
+       app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
