--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,11 @@
     <color name="b_9A9A9A">#9A9A9A</color>
     <color name="FE9520">#FE9520</color>
     <color name="transparent">#00000000</color>
+    <color name="D9D9D9">#D9D9D9</color>
+    <color name="FFF8F0">#FFF8F0</color>
+    <color name="F5B064">#F5B064</color>
+    <color name="F5F5F5">#F5F5F5</color>
+    <color name="A8A8A8">#A8A8A8</color>
+
 
 </resources>
