--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,72 +5,203 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.LoginActivity"
-    android:background="@color/blue_400">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_login"
-        android:layout_width="match_parent"
+    android:background="@color/white">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_linel"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.04"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_liner"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.96"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_liner01"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.88"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_linet"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.16"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/login_linel01"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.12"/>
+    <TextView
+        android:id="@+id/tv_gohome"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:text="游客模式"
+        android:textColor="#FE9520"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <TextView
-            android:id="@+id/login_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="WanAndroid"
-            android:textSize="18dp"
-            android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/login_liner"/>
+    <ImageView
+        android:id="@+id/iv_head"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_linet"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/logo"/>
+
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/iv_head"
+        android:layout_marginTop="60dp"
+        android:padding="15dp"
+        app:shape_radius="22dp"
+        app:shape_solidColor="@color/F5F5F5"
+        app:layout_constraintStart_toEndOf="@+id/login_linel01"
+        app:layout_constraintEnd_toStartOf="@id/login_liner01">
+        <EditText
+            android:id="@+id/edt_phone"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:hint="请输入手机号"
+            android:textSize="17dp"
+            android:inputType="phone"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/iv_phoneclear" />
+        <ImageView
+            android:id="@+id/iv_phoneclear"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:src="@drawable/clear_icon"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <com.hjq.shape.view.ShapeEditText
-            android:id="@+id/login_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:shape_radius="5dp"
-            app:shape_solidColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/login_title"
-            android:layout_marginTop="10dp"
-            android:hint="输入账号"
-            android:textSize="13dp"
-            android:paddingStart="5dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <com.hjq.shape.view.ShapeEditText
-            android:id="@+id/login_pass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:shape_radius="5dp"
-            app:shape_solidColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/login_account"
-            android:layout_marginTop="10dp"
-            android:hint="输入密码"
-            android:textSize="13dp"
-            android:paddingStart="5dp"/>
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_sms"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/layout_name"
+        android:layout_marginTop="20dp"
+        android:padding="15dp"
+        android:text="123456"
+        app:shape_radius="22dp"
+        app:shape_solidColor="@color/F5F5F5"
+        app:layout_constraintStart_toEndOf="@+id/login_linel01"
+        app:layout_constraintEnd_toStartOf="@id/login_liner01" >
+        <EditText
+            android:id="@+id/edt_sms"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="@string/hint_sms"
+            android:textSize="17dp"
+            android:background="@null"
+            android:inputType="number"
+            android:maxLength="6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_sms"/>
         <TextView
-            android:id="@+id/login_regis"
+            android:id="@+id/tv_sms"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/string_getsms"
+            android:textColor="@color/FE9520"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.view.ShapeButton
+        android:id="@+id/btn_login"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="14dp"
+        android:paddingBottom="14dp"
+        app:shape_radius="21.5dp"
+        app:shape_solidColor="@color/FFC482"
+        android:text="@string/string_login"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/login_linel01"
+        app:layout_constraintEnd_toStartOf="@id/login_liner01"
+        app:layout_constraintTop_toBottomOf="@+id/layout_sms"
+        android:layout_marginTop="90dp"/>
+    <TextView
+        android:id="@+id/tv_other_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="-其他登录方式-"
+        android:textColor="@color/A8A8A8"
+        android:textSize="13dp"
+        app:layout_constraintEnd_toEndOf="@id/btn_login"
+        app:layout_constraintStart_toStartOf="@id/btn_login"
+        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+    <ImageView
+        android:id="@+id/iv_wechat_login"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/wechat_icon"
+        app:layout_constraintEnd_toEndOf="@id/btn_login"
+        app:layout_constraintStart_toStartOf="@id/btn_login"
+        app:layout_constraintTop_toBottomOf="@id/tv_other_login" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/login_linel01"
+        app:layout_constraintEnd_toStartOf="@id/login_liner01"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal">
+        <com.hjq.shape.view.ShapeCheckBox
+            android:id="@+id/login_check"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:text="@string/string_aggrument"
+            android:textSize="12dp"
+            android:textColor="@color/F6B6B6B"
+            android:paddingStart="5dp"
+            android:background="@color/transparent"
+            app:shape_buttonCheckedDrawable="@drawable/radio_icon_selected"
+            app:shape_buttonDrawable="@drawable/radio_icon_default"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:shape_radius="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/login_pass"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="5dp"
-            android:text="注册账号"
-            android:textColor="@color/white"
-            android:textSize="13dp" />
-
-        <com.hjq.shape.view.ShapeButton
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
+            android:textSize="12dp"
+            android:text="《用户协议》"
+            android:textColor="@color/FE9520"/>
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:shape_radius="5dp"
-            app:shape_solidColor="@color/white"
-            android:text="登录"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/login_regis"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"/>
+            android:textSize="12dp"
+            android:text="《隐私政策》"
+            android:textColor="@color/FE9520"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12dp"
+            android:text="《儿童隐私协议》"
+            android:textColor="@color/FE9520"/>
+    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <androidx.constraintlayout.widget.Group
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="tv_other_login,iv_wechat_login"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
