--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -8,7 +8,7 @@
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     app:shape_radius="11dp"
-    app:shape_solidColor="@color/F5F5F5"
+    app:shape_solidColor="@color/FAFAFA"
     android:paddingBottom="15dp">
     <ImageView
         android:id="@+id/iv_product"
