--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,11 @@
     <color name="F5B064">#F5B064</color>
     <color name="F5F5F5">#F5F5F5</color>
     <color name="A8A8A8">#A8A8A8</color>
+    <color name="FAFAFA">#FAFAFA</color>
+    <color name="FFC482">#FFC482</color>
+    <color name="F6B6B6B">#6B6B6B</color>
+    <color name="F4500">#55000000</color>
+    <color name="CCCCCC">#CCCCCC</color>
 
 
 </resources>
