--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,7 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:hint="请输入手机号"
+            android:text="123"
             android:textSize="17dp"
             android:inputType="phone"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,6 +107,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:hint="@string/hint_sms"
+            android:text="123"
             android:textSize="17dp"
             android:background="@null"
             android:inputType="number"
@@ -177,7 +179,8 @@
             android:paddingStart="5dp"
             android:background="@color/transparent"
             app:shape_buttonCheckedDrawable="@drawable/radio_icon_selected"
-            app:shape_buttonDrawable="@drawable/radio_icon_default"/>
+            app:shape_buttonDrawable="@drawable/radio_icon_default"
+            android:checked="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
