--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,14 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/home"
     android:title="@string/page_home"
-    app:showAsAction="ifRoom"/>
+    app:showAsAction="ifRoom"
+    android:icon="@drawable/selector_home"/>
     <item android:id="@+id/project"
         android:title="@string/page_project"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/selector_map"/>
 <!--    <item android:id="@+id/pub"-->
 <!--        android:title="@string/page_public"-->
 <!--        app:showAsAction="ifRoom"/>-->
     <item android:id="@+id/mine"
         android:title="@string/page_mine"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/selector_mine"/>
 </menu>
