--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,17 +49,28 @@
                 app:layout_constraintBottom_toBottomOf="@+id/personal_photo"
                 app:layout_constraintStart_toStartOf="@+id/personal_name"
                 app:layout_constraintTop_toBottomOf="@+id/personal_name"
-                app:layout_goneMarginStart="15.5dp"/>
+                app:layout_goneMarginStart="15.5dp"
+                android:visibility="gone"/>
 
-            <TextView
+            <com.hjq.shape.view.ShapeButton
                 android:id="@+id/personal_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15.5dp"
-                android:textColor="#1A1A1A"
-                android:textSize="18dp"
+                android:layout_marginStart="25dp"
                 app:layout_constraintStart_toEndOf="@+id/personal_photo"
-                app:layout_constraintTop_toTopOf="@+id/personal_photo" />
+                app:layout_constraintTop_toTopOf="@+id/personal_photo"
+                app:layout_constraintBottom_toBottomOf="@+id/personal_photo"
+                app:shape_radius="22.5dp"
+                android:text="登录/注册"
+                android:textColor="@color/white"
+                android:textSize="13dp"
+                app:shape_solidColor="@color/FE9520"
+                android:paddingStart="10dp"
+                android:paddingTop="5.5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="5.5dp"
+                android:gravity="center"
+                />
 
             <com.hjq.shape.view.ShapeTextView
                 android:id="@+id/personal_month"
@@ -75,7 +87,8 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:paddingTop="3dp"
-                android:paddingBottom="3dp"/>
+                android:paddingBottom="3dp"
+                android:visibility="gone"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
