--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,14 +48,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@id/login_liner"/>
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_head"
         android:layout_width="90dp"
         android:layout_height="90dp"
         app:layout_constraintTop_toBottomOf="@+id/login_linet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo"
+        app:shapeAppearance="@style/circleImage"
+        app:strokeColor="@color/white"/>
 
     <com.hjq.shape.layout.ShapeConstraintLayout
         android:id="@+id/layout_name"
@@ -162,7 +164,7 @@
         app:layout_constraintStart_toStartOf="@id/btn_login"
         app:layout_constraintTop_toBottomOf="@id/tv_other_login" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/login_linel01"
@@ -180,26 +182,38 @@
             android:background="@color/transparent"
             app:shape_buttonCheckedDrawable="@drawable/radio_icon_selected"
             app:shape_buttonDrawable="@drawable/radio_icon_default"
-            android:checked="true"/>
+            android:checked="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
         <TextView
+            android:id="@+id/tv_user_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12dp"
             android:text="《用户协议》"
-            android:textColor="@color/FE9520"/>
+            android:textColor="@color/FE9520"
+            app:layout_constraintStart_toEndOf="@+id/login_check"
+            app:layout_constraintTop_toTopOf="@+id/login_check"/>
         <TextView
+            android:id="@+id/tv_privacy_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12dp"
             android:text="《隐私政策》"
-            android:textColor="@color/FE9520"/>
+            android:textColor="@color/FE9520"
+            app:layout_constraintStart_toEndOf="@+id/tv_user_agreement"
+            app:layout_constraintTop_toTopOf="@+id/tv_user_agreement"/>
         <TextView
+            android:id="@+id/tv_child_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12dp"
             android:text="《儿童隐私协议》"
-            android:textColor="@color/FE9520"/>
-    </LinearLayout>
+            android:textColor="@color/FE9520"
+            app:layout_constraintStart_toStartOf="@+id/tv_user_agreement"
+            app:layout_constraintTop_toBottomOf="@+id/tv_user_agreement"
+            android:layout_marginTop="5dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
