--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -95,34 +95,33 @@
             <com.hjq.shape.layout.ShapeConstraintLayout
                 android:id="@+id/layout_notice"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="h,1:0.15"
                 app:layout_constraintTop_toBottomOf="@+id/home_banner"
                 app:layout_constraintStart_toStartOf="@+id/home_banner"
                 app:layout_constraintEnd_toEndOf="@id/home_banner"
-                android:paddingTop="13dp"
-                android:paddingBottom="12dp"
                 android:layout_marginTop="10dp"
                 app:shape_radius="11dp"
-                app:shape_solidColor="@color/FFF8F0">
+                app:shape_solidColor="@color/FFF8F0"
+                android:paddingStart="9.5dp"
+                android:paddingEnd="9.5dp">
                 <ImageView
                     android:id="@+id/iv_notice"
                     android:layout_width="35.5dp"
                     android:layout_height="45.5dp"
+                    android:src="@drawable/logo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
 
-                <TextView
-                    android:id="@+id/tv_notice"
+                <com.youth.banner.Banner
+                    android:id="@+id/notice_banner"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/string_notice"
-                    android:textSize="13dp"
-                    android:textColor="@color/F5B064"
+                    android:layout_height="match_parent"
                     app:layout_constraintStart_toEndOf="@+id/iv_notice"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:maxLines="2"
-                    android:ellipsize="end"/>
+                    />
 
             </com.hjq.shape.layout.ShapeConstraintLayout>
             <androidx.recyclerview.widget.RecyclerView
