--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="F6B6B6B">#6B6B6B</color>
     <color name="F4500">#55000000</color>
     <color name="CCCCCC">#CCCCCC</color>
+    <color name="FF2d2d2d">#2D2D2D</color>
 
 
 </resources>
