--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -475,7 +475,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/layout_fankui"
+            app:layout_constraintTop_toBottomOf="@+id/layout_dub"
+            android:layout_marginTop="10dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             android:paddingTop="20dp"
