--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name="F545454">#545454</color>
     <color name="F4D4D4D">#4D4D4D</color>
     <color name="FFECD6">#FFECD6</color>
+    <color name="F666666">#666666</color>
+    <color name="FF4E4E">#FF4E4E</color>
 
 
 </resources>
