--- a/app/src/main/res/layout/layout_flex_tag.xml
+++ b/app/src/main/res/layout/layout_flex_tag.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="15dp">
-    <com.hjq.shape.view.ShapeTextView
+    <com.hjq.shape.view.ShapeRadioButton
         android:id="@+id/tv_specification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="商品规格"
         android:textSize="13dp"
-        app:shape_textSelectedColor="@color/FE9520"
         app:shape_radius="6dp"
-        app:shape_solidColor="@color/FFECD6"
+        app:shape_solidColor="@color/F5F5F5"
         android:textColor="@color/F4D4D4D"
         android:gravity="center"
         android:paddingStart="15dp"
         android:paddingTop="8dp"
         android:paddingEnd="15dp"
         android:paddingBottom="8dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
