--- a/app/src/main/res/layout/layout_specifications.xml
+++ b/app/src/main/res/layout/layout_specifications.xml
@@ -54,6 +54,7 @@
         app:layout_constraintBottom_toBottomOf="@id/label_count"
         app:layout_constraintEnd_toEndOf="parent">
         <TextView
+            android:id="@+id/tv_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-"/>
@@ -66,6 +67,7 @@
             android:layout_marginStart="10dp"/>
 
         <TextView
+            android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
@@ -79,6 +81,7 @@
             android:layout_marginStart="10dp"/>
 
         <TextView
+            android:id="@+id/tv_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -91,9 +94,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/layout_flex_tag"
-        android:orientation="horizontal"
-        tools:itemCount="5"
-        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/label_count"
         android:layout_marginBottom="38dp"/>
 
@@ -142,6 +142,7 @@
             android:textColor="@color/FE9520"/>
     </LinearLayout>
     <ImageView
+        android:id="@+id/iv_close"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:background="@drawable/close_icon"
