--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="FFECD6">#FFECD6</color>
     <color name="F666666">#666666</color>
     <color name="FF4E4E">#FF4E4E</color>
+    <color name="e0e0e0">#e0e0e0</color>
 
 
 </resources>
