--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,8 @@
     <color name="F666666">#666666</color>
     <color name="FF4E4E">#FF4E4E</color>
     <color name="e0e0e0">#e0e0e0</color>
+    <color name="F4C4C4C">#4C4C4C</color>
+    <color name="DCDCDC">#DCDCDC</color>
 
 
 </resources>
