--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -4,6 +4,404 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.OrderDetailActivity">
+    tools:context=".ui.OrderDetailActivity"
+    android:background="@color/F5F5F5">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/line_orderleft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.04"
+        android:orientation="vertical"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/line_orderright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.96"/>
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_ordertop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:shape_startColor="#FE9520"
+        app:shape_endColor="#FEAD20"
+        android:paddingBottom="15dp"
+        app:layout_constraintTop_toTopOf="parent">
+        <com.hjq.bar.TitleBar
+            android:id="@+id/title_order"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            app:title="确认订单"
+            android:background="@color/transparent"
+            app:titleColor="@color/white"
+            app:leftTitleColor="@color/white"
+            app:leftIconTint="@color/white"
+            app:lineVisible="false"/>
+        <TextView
+            android:id="@+id/order_countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_order"
+            android:text="剩29分59秒自动取消订单"
+            android:textSize="12dp"
+            android:textColor="@color/white" />
+        <com.hjq.shape.layout.ShapeConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:shape_solidColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/order_countdown"
+            app:shape_radius="11dp"
+            android:layout_marginTop="20dp"
+            app:layout_goneMarginTop="0dp"
+            android:padding="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp">
+            <TextView
+                android:id="@+id/address_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="XXX"
+                android:textSize="15dp"
+                android:textColor="@color/F1A1A1A"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/address_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="157****4235"
+                app:layout_constraintStart_toEndOf="@id/address_name"
+                app:layout_constraintTop_toTopOf="@id/address_name"
+                android:layout_marginStart="13dp"
+                android:textSize="13dp"
+                android:textColor="@color/F1A1A1A"/>
+            <com.hjq.shape.layout.ShapeLinearLayout
+                android:id="@+id/layout_address01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:shape_radius="11.5dp"
+                app:shape_solidColor="@color/FFECD6"
+                android:orientation="horizontal"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:gravity="center_vertical"
+                app:layout_constraintTop_toTopOf="@id/address_phone"
+                app:layout_constraintEnd_toEndOf="parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改地址"
+                    android:textColor="@color/FE9520"
+                    android:textSize="12dp"/>
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:src="@drawable/address_jump_icon"
+                    android:layout_marginStart="5dp"/>
 
+            </com.hjq.shape.layout.ShapeLinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="河北省石家庄市桥西区新石街道新石中路友谊大街口西行5
+00米路东菜鸟驿站"
+                android:textColor="@color/F666666"
+                android:textSize="12dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_address01"
+                android:layout_marginTop="10dp"/>
+        </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_ordertitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        app:shape_solidColor="@color/white"
+        app:shape_radius="11dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_ordertop"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@id/line_orderleft"
+        app:layout_constraintEnd_toStartOf="@id/line_orderright">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_orderpic"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/aa"
+            android:scaleType="centerCrop"
+            app:shapeAppearance="@style/circle11Image2"/>
+        <TextView
+            android:id="@+id/tv_ordertitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="宝贝高碳钢儿童平衡车三轮
+车电动车宝贝高碳钢儿童平衡车三轮"
+            android:textSize="14dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintStart_toEndOf="@id/iv_orderpic"
+            app:layout_constraintTop_toTopOf="@id/iv_orderpic"
+            app:layout_constraintEnd_toStartOf="@id/tv_price"
+            android:maxLines="2"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"/>
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="￥50.48"
+            android:textColor="@color/F1A1A1A"
+            android:textSize="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_ordertitle"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="×1"
+            app:layout_constraintTop_toBottomOf="@id/tv_ordertitle"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:id="@+id/layout_orderinfo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        app:shape_solidColor="@color/white"
+        app:shape_radius="11dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_ordertitle"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toEndOf="@id/line_orderleft"
+        app:layout_constraintEnd_toStartOf="@id/line_orderright">
+        <TextView
+            android:id="@+id/tv_orderlabel01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="商品总计"
+            android:textSize="15dp"
+            android:textColor="@color/F666666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="￥xxx"
+            android:textSize="15dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_orderlabel02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="优惠券"
+            android:textSize="15dp"
+            android:textColor="@color/F666666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel01"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="￥xxx"
+            android:textSize="15dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintTop_toTopOf="@id/tv_orderlabel02"
+            app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/tv_orderlabel03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="配送服务"
+            android:textSize="15dp"
+            android:textColor="@color/F666666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel02"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="普通快递免邮"
+            android:textSize="15dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintTop_toTopOf="@id/tv_orderlabel03"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_orderlabel04"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="订单备注"
+            android:textSize="15dp"
+            android:textColor="@color/F666666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel03"
+            android:layout_marginTop="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="无"
+            android:textSize="15dp"
+            android:textColor="@color/CCCCCC"
+            app:layout_constraintTop_toTopOf="@id/tv_orderlabel04"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="15dp"
+        app:layout_constraintEnd_toStartOf="@id/line_orderright"
+        app:layout_constraintStart_toEndOf="@id/line_orderleft"
+        app:layout_constraintTop_toBottomOf="@id/layout_orderinfo"
+        app:shape_radius="11dp"
+        app:shape_solidColor="@color/white">
+
+        <ImageView
+            android:id="@+id/iv_kefu"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/service_icon"
+            app:layout_constraintEnd_toStartOf="@+id/tv_kefu"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel06" />
+
+        <TextView
+            android:id="@+id/tv_ordernum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="xxxxxxxxxx"
+            android:textColor="@color/F1A1A1A"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_copy"
+            app:layout_constraintEnd_toStartOf="@id/tv_copy"
+            app:layout_constraintTop_toTopOf="@id/tv_copy" />
+
+        <TextView
+            android:id="@+id/tv_copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/copy"
+            android:textColor="@color/FE9520"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_orderlabel05"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_orderlabel05" />
+
+        <TextView
+            android:id="@+id/tv_orderlabel06"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/label_time"
+            android:textColor="@color/F666666"
+            android:textSize="15dp"
+            app:layout_constraintStart_toStartOf="@id/tv_orderlabel05"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel05" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2021-07-09 10:32"
+            android:textColor="@color/F666666"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_orderlabel06"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_orderlabel06" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/F5F5F5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_orderlabel06" />
+
+        <TextView
+            android:id="@+id/tv_orderlabel05"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_ordernum"
+            android:textColor="@color/F666666"
+            android:textSize="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_kefu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/kefu"
+            android:textSize="15dp"
+            android:textColor="@color/F1A1A1A"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/iv_kefu"
+            app:layout_constraintTop_toTopOf="@id/iv_kefu"
+            app:layout_constraintBottom_toBottomOf="@id/iv_kefu"
+            android:layout_marginStart="5dp"/>
+
+        <TextView
+            android:id="@+id/tv_kftime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/kftime"
+            app:layout_constraintEnd_toStartOf="@+id/tv_kftime02"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_kefu"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/tv_kftime02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="9:00-21:00"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/tv_kftime"
+            app:layout_constraintTop_toTopOf="@id/tv_kftime" />
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:shape_solidColor="@color/white"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.hjq.shape.view.ShapeTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="取消订单"
+                android:textSize="14dp"
+                android:textColor="@color/FF4E4E"
+                app:shape_radius="17dp"
+                android:paddingStart="15dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="8dp"
+                app:shape_strokeWidth="0.5dp"
+                app:shape_strokeColor="@color/CCCCCC"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+    </com.hjq.shape.layout.ShapeConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
